# rust-cd-da-reader

./: Cargo.toml  README.md  build.rs
.github/workflows/: pull-request-workflow.yaml
docs/: add_chd_cd_da_reading.md  consuming-cd-da-reader.md
examples/: custom_retry.rs  detect_track_formats.rs  file_backend.rs  list_drives.rs  play_audio_track.rs  read_all_tracks.rs  read_data_track.rs  read_first_track.rs  read_toc.rs  read_track.rs  save_data_track.rs  stream_last_track.rs  stream_with_progress.rs
examples/common/: mod.rs
src/: backend.rs  data_reader.rs  discovery.rs  errors.rs  lib.rs  linux.rs  macos.rs  macos_cd_shim.c  main.rs  parse_toc.rs  read_loop.rs  read_track.rs  retry.rs  stream.rs  utils.rs  windows.rs  windows_read_track.rs
src/data_reader/: detect.rs  mod.rs  raw_sector.rs  sector_read_format.rs  track_information.rs
src/mac/: audio_reader.c  da_guard.c  data_reader.c  device_service.c  list_drives.c  shim_common.h  toc_reader.c
src/platform/: mod.rs
src/platform/linux/: device.rs  mod.rs  read_cd.rs  sg_io.rs  toc.rs  track_information.rs
src/platform/macos/: device.rs  ffi.rs  mod.rs  read_cd.rs  toc.rs  track_information.rs
src/platform/macos/native/: device_service.c  list_drives.c  read_cd.c  shim_common.h  toc_reader.c  track_information.c
src/platform/windows/: device.rs  mod.rs  read_cd.rs  spti.rs  toc.rs  track_information.rs
