[package]
name = "cd-da-reader"
version = "0.1.0"
edition = "2024"

[dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.175"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem", 
    "Win32_System_Ioctl",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_Storage_IscsiDisc",
]}

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1.2.34"
