[package]
name = "cd-da-reader"
version = "0.2.1"
edition = "2024"
description = "CD-DA (audio CD) reading library"
repository = "https://github.com/Bloomca/rust-cd-da-reader"
license = "MIT"
keywords = ["audio_CD", "CD-DA"]
exclude = ["target", "Cargo.lock"]

[dependencies]

[target.'cfg(any(target_os = "macos",target_os = "linux"))'.dependencies]
libc = "0.2.175"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem", 
    "Win32_System_Ioctl",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_Storage_IscsiDisc",
]}

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1.2.34"
